# image-resizer

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.cpp
tests/: test_resizer.cpp
